Feat. mejoras en html

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     <!-- Contacto -->
     <section id="contacto" class="section container">
       <header class="section-head">
-        <h2>Contacto</h2>
+        <h2> Ejemplo de sección Contacto</h2>
         <p class="muted">¿Hablamos? Estoy disponible para colaborar en proyectos y evaluaciones.</p>
       </header>
 
