Feat: mejoras en index.html

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
   <!-- Footer -->
   <footer class="site-footer">
     <div class="container">
-      © <span id="year"></span> Tu Nombre — Portafolio • Construido con HTML/CSS/JS
+      © <span id="year"></span> Marcelo Navarrete — Portafolio • Construido con HTML/CSS/JS
     </div>
   </footer>
 
